--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <div class="container d-flex align-items-center h-100">
+    <div class="container d-flex align-items-sm-start align-items-md-center h-100">
       <div class="row">
         <header class="text-center col-12">
           <h1 class="text-uppercase"><strong>The biggest startup event of the year</strong></h1>
